feat: get domains from HTTP request instead of body
